--- a/index.html
+++ b/index.html
@@ -472,6 +472,9 @@
     </section>
     <!-- brands -->
     <!-- footer -->
+    <div>
+         <iframe src="https://microsoft.github.io/BotFramework-WebChat/01.getting-started/a.full-bundle/" style="min-width: 400px; width: 100%; min-height: 500px;" data-com-scribehow-frame-id="5d5c851e-1876-4ad3-80d7-fad088d2935e"></iframe>
+      </div>
     <footer>
         <div class="container">
             <div class="row footer-top">
